--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /node_modules
 /public/hot
 /public/css
+/public/mix-manifest.json
+/public/app
 /public/js
+/public/libraries
 /public/storage
 /storage/*.key
 /vendor
