Actualizando .gitignore para dejar de seguir los cambios para la carpeta /public

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,5 @@
 /node_modules
-/public/hot
-/public/css
-/public/mix-manifest.json
-/public/app
-/public/js
-/public/libraries
-/public/storage
+/public
 /storage/*.key
 /vendor
 /.idea
