--- a/package.json
+++ b/package.json
@@ -8,40 +8,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "4.1.3",
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@angular/router": "4.1.3",
-    "@angular/upgrade": "4.1.3",
-    "angular-in-memory-web-api": "0.3.2",
-    "angulartics2": "^2.2.2",
-    "bootstrap": "^3.3.6",
-    "chart.js": "^2.6.0",
-    "core-js": "^2.4.1",
-    "primeng": "^4.0.1",
-    "reflect-metadata": "^0.1.9",
-    "rxjs": "5.4.0",
-    "systemjs": "0.20.12",
-    "typescript": "2.2.0",
-    "typings": "^1.5.0",
-    "zone.js": "^0.8.5"
-  },
-  "devDependencies": {
-    "concurrently": "^3.3.0",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-minify": "^1.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-typescript": "^3.2.2",
-    "node-sass": "^4.5.3",
-    "run-sequence": "^1.2.2",
-    "sass": "^1.0.0-beta.2",
-    "typings": "^2.1.0"
+    "gulp": "3.9.1",
+    "gulp-concat": "2.6.1",
+    "gulp-cssmin": "0.2.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "3.1.0",
+    "gulp-sequence": "0.4.6",
+    "gulp-uglify": "3.0.0"
   }
 }
