--- a/package.json
+++ b/package.json
@@ -8,21 +8,29 @@
     "build": "gulp build",
     "watch:sass": "gulp app-sass:watch",
     "watch:js": "gulp app-js:watch",
-    "watch:copyVueComponent": "gulp copyVueComponent:watch",
-    "developer": "concurrently \"npm run watch:js\" \"npm run watch:sass\" \"npm run watch:copyVueComponent\""
+    "developer": "concurrently \"npm run watch:js\" \"npm run watch:sass\""
   },
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "concurrently": "^3.3.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-copy": "^1.0.1",
     "gulp-cssmin": "^0.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-strip-css-comments": "^1.2.0",
     "gulp-uglify": "^3.0.0",
-    "run-sequence": "^2.2.0"
+    "gulp-vueify": "0.0.3",
+    "run-sequence": "^2.2.0",
+    "vueify-insert-css": "^1.0.0",
+    "webpack-stream": "^4.0.0"
   },
   "repository": {
     "type": "git",
